# dependency_catch

./: CMakeLists.txt  CatchTestsConfig.cmake
Resources/: CatchTestsConfig.cmake  catchtests.cmake  catchtests.cpp
include/: catch.h
src/: catch-main.cpp
